squid/deploy-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy-deploy
  namespace: default
  labels:
    name: nginx-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
        - name: nginx-proxy
          image: docker.io/nginx:alpine
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/index.html
            - name: pac
              mountPath: /usr/share/nginx/html/proxy.pac
          ports:
            - containerPort: 80
              protocol: TCP
      volumes:
        - name: html
          hostPath:
            path: /home/ubuntu/squid/nginx-proxy/index.html
            type: File 
        - name: pac
          hostPath:
            path: /home/ubuntu/squid/nginx-proxy/proxy.pac
            type: File        
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-svc
  labels:
    name: nginx-proxy
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30080
  selector:
    app: nginx-proxy
