squid/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cyri-pi4
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: squid.cyri.intra
    http:
      paths:
      - backend:
          service:
            name: squid-service
            port: 
              number: 3128
        path: /
        pathType: Prefix
  - host: kibana.cyri.intra
    http:
      paths:
      - backend:
          service:
            name: kibana-svc
            port: 
              number: 5601
        path: /
        pathType: Prefix
